# browser-interaction-fuzzer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  test_ui_interaction.py
docs/: development-guide.md
docs/plans/: 2026-05-14-browser-ui-integration.md  2026-05-21-error-handling-improvements.md  2026-05-25-simulator-stability-and-reuse.md  2026-05-27-simulator-reuse-env-rust-handoff.md
docs/superpowers/plans/: 2026-05-14-browser-ui-traversal.md
docs/superpowers/specs/: 2026-05-14-browser-ui-traversal-design.md
examples/simulator-smoke/: README.md  actions.json  index.html
src/: main.rs
src/dom-generator/: README.md  ir_design_notes.md  main.py  pyproject.toml
src/dom-generator/generator/: config.py  keywords.py
src/fuzzing_engine/: actions.rs  app.rs  config.rs  corpus.rs  coverage.rs  crash.rs  executor.rs  input.rs  libafl_executor.rs  lifecycle.rs  metrics.rs  mod.rs  reporting.rs  seed_store.rs  testcase_runner.rs
src/user-interaction-simulator/: __init__.py  backend_loader.py  browser_env.py  executor.py  main.py  pyproject.toml
src/user-interaction-simulator/linux/: atspi_backend.py
src/user-interaction-simulator/tests/: test_backend.py  test_browser_env.py  test_executor.py  test_real_browser_context_isolation.py
src/user-interaction-simulator/user_interaction_simulator/: backend_loader.py  base.py  browser_env.py  browser_ui.py  constants.py  dom_utils.py  executor.py  main.py
src/user-interaction-simulator/user_interaction_simulator/linux/: atspi_backend.py
src/user-interaction-simulator/user_interaction_simulator/tests/: test_browser_env.py  test_executor.py
src/user-interaction-simulator/windows/: uia_backend.py
(+37 files in other folders)
