[package]
name = "browser-interaction-fuzzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "browser-interaction-fuzzer"
path = "src/main.rs"

[dependencies]
ctrlc = "3.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
