[package]
name = "browser-interaction-fuzzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "browser-interaction-fuzzer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3.4"
libafl = { version = "0.15.4", default-features = false, features = ["std", "derive", "serdeany_autoreg"] }
libafl_bolts = { version = "0.15.4", default-features = false, features = ["std", "derive", "serdeany_autoreg"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
