[project]
name = "user-interaction-simulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.40",
  "uiautomation>=2.0; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["user_interaction_simulator", "user_interaction_simulator.linux", "user_interaction_simulator.windows"]

[tool.setuptools.package-dir]
"user_interaction_simulator" = "."
"user_interaction_simulator.linux" = "linux"
"user_interaction_simulator.windows" = "windows"
